--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     height: 90vh;
     justify-content: center;
-    padding: 5vh 3vw ;
+    padding: 1vh 3vw 13vh;
     
   }
   .deck {
@@ -27,11 +27,11 @@
     background-color: white;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 45vh;
+    width: 55vh;
     height: 90%;
     max-height: 900px;
     will-change: transform;
-    background-size: contain;
+    background-size: auto 100%;
     border-radius: 10px;
     box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
   }
