--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -6,15 +6,18 @@
     align-items: center;
     height: 80vh;
     justify-content: center;
-    padding: 1vh 3vw 15vh;
+    padding: 1vh 3vw 4vh;
     
   }
   .deck {
-    margin: 2vh 3vw;
+    margin-bottom: 3vh;
+    margin-top: 2vh;
+    margin-left: 3vw;
+    margin-right: 3vw;
     padding: 1vh 1vw;
     position: absolute;
     width: 90%;
-    height: 90%;
+    height: 85vh;
     will-change: transform;
     display: flex;
     align-items: center;
@@ -31,8 +34,9 @@
     height: 90%;
     max-height: 900px;
     will-change: transform;
-    background-size: auto 100%;
+    background-size: cover;
     border-radius: 10px;
+    z-index: 10;
     box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
   }
   
